--- a/toolActivity.html
+++ b/toolActivity.html
@@ -44,53 +44,106 @@
     </div>
     <!-- 分页部分开始 -->
     <div class="page_list">
-        <span class="previous">上一页</span>
+        <span class="previous" id="previous">上一页</span>
         <select>
         </select>
-        <span class="next">下一页</span>
+        <span class="next" id="next">下一页</span>
     </div>
     <!-- 分页部分结束 -->
     <script src="./js/toolActivity.js"></script>
     <script src="./js/zh-zepto/zepto.min.js"></script>
+    <script src="./js/zpy/fastclick.js"></script>
     <script src="./js/zpy/template-web.js"></script>
     <script>
+        if ('addEventListener' in document) {
+            document.addEventListener('DOMContentLoaded', function () {
+                FastClick.attach(document.body);
+            }, false);
+        }
+
         //获取元素
         var selectObj = document.getElementsByTagName("select");
-        var pageid = 1;
-        //渲染数据
-        $.ajax({
-            dataType: "json",
-            type: "get",
-            data: {
-                pageid: 1
-            },
-            url: "http://193.112.55.79:9090/api/getmoneyctrl",
-            success: function (res) {
-                console.log(res.result);
+        // console.dir(selectObj);
+        pageid = 1;
+        var previous = document.getElementById("previous");
+        var next = document.getElementById("next");
+        var pagesize;
+        flag = false;
+        setData(pageid);
 
-                var data = res.result;
-                //调用模板引擎渲染数据
-                var context = {
-                    comments: data
+
+        function setData(pageid) {
+            //渲染数据
+            $.ajax({
+                dataType: "json",
+                type: "get",
+                data: {
+                    pageid: pageid
+                },
+                url: "http://193.112.55.79:9090/api/getmoneyctrl",
+                success: function (res) {
+                    // console.log(res.result);
+
+                    var data = res.result;
+                    //调用模板引擎渲染数据
+                    var context = {
+                        comments: data
+                    }
+                    //借助模板引擎的api
+                    var html = template('tmpl', context);
+                    //将渲染结果的html设置到默认元素的innerHTML中
+                    $(".contnetUl").html(html);
+
+                    //获取总页数
+                    pagesize = res.pagesize;
+                    if (flag == false) {
+                        // console.log ("123");
+                        flag = true;
+                        //动态生成option
+                        for (var i = 0; i < pagesize; i++) {
+                            var optionObj = document.createElement("option");
+                            $("select").append(optionObj);
+                            $(optionObj).html("<i>" + (i + 1) + "</i>/<i>" + pagesize + "</i>");
+                            // $(optionObj).attr("index", i);
+                        }
+                    }
                 }
-                //借助模板引擎的api
-                var html = template('tmpl', context);
-                //将渲染结果的html设置到默认元素的innerHTML中
-                $(".contnetUl").html(html);
+            });
+        }
 
-                //获取总页数
-                var pagesize = res.pagesize;
-
-                //动态生成option
-                for (var i = 0; i < pagesize; i++) {
-                    var optionObj = document.createElement("option");
-                    $("select").append(optionObj);
-                    $(optionObj).html("<i>" + (i + 1) + "</i>/<i>" + pagesize + "</i>");
-                }
-            }
+        $("select").on("change", function () {
+            // console.log($(this).attr("index"));
+            console.log(this.value);
+            var str = this.value;
+            var index = str.replace("/10","");
+            pageid = index;
+            setData(index);
+            // console.log($(this).attr("index"));
         });
-
+        
         //为上下页标签注册点击事件
+        previous.onclick = function () {
+            var options = document.getElementsByTagName("option");
+            if (pageid == 1) {
+                $(next).attr('disable', true);
+                return;
+            }
+            pageid--;
+            setData(pageid);
+            console.log($(options[pageid]));
+            $(options[pageid - 1]).prop("selected", "selected");
+        }
+
+        next.onclick = function () {
+            var options = document.getElementsByTagName("option");
+            if (pageid == pagesize) {
+                $(next).attr('disable', true);
+                return;
+            }
+            pageid++;
+            setData(pageid);
+            $(options[pageid - 1]).prop("selected", "selected");
+        }
     </script>
 </body>
 
