补充项目文档

--- a/get10Top.html
+++ b/get10Top.html
@@ -161,6 +161,7 @@
             // console.log(Request["id"]);
 
             var btId = Request["id"];
+            console.log(typeof btId);
             var btName = Request["name"];
             // console.log(btName);
 
