--- a/toolActivity.html
+++ b/toolActivity.html
@@ -13,6 +13,17 @@
 </head>
 
 <body>
+    <!-- 头部部分开始 -->
+    <header>
+        <div class="back"><i class="iconfont">&#xf0343;</i></div>
+        <h3>省钱控-最新页面</h3>
+        <div class="download">
+            <a href="javascript:;">
+                <img src="./images/header_app.png" alt="">
+            </a>
+        </div>
+    </header>
+    <!-- 头部部分结束 -->
     <div class="view">
         <ul class="contnetUl">
             <!-- 准备一个模板引擎 -->
