--- a/font/font-zpy/demo_fontclass.html
+++ b/font/font-zpy/demo_fontclass.html
@@ -13,6 +13,12 @@
         <ul class="icon_lists clear">
             
                 <li>
+                <i class="icon iconfont icon-fanhui"></i>
+                    <div class="name">返回</div>
+                    <div class="fontclass">.icon-fanhui</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-liuyan"></i>
                     <div class="name">评论</div>
                     <div class="fontclass">.icon-liuyan</div>
