--- a/font/font-zpy/demo_unicode.html
+++ b/font/font-zpy/demo_unicode.html
@@ -33,6 +33,12 @@
         <ul class="icon_lists clear">
             
                 <li>
+                <i class="icon iconfont">&#xf0343;</i>
+                    <div class="name">返回</div>
+                    <div class="code">&amp;#xf0343;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe650;</i>
                     <div class="name">评论</div>
                     <div class="code">&amp;#xe650;</div>
