--- a/details.html
+++ b/details.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/base.css">
+    <link rel="stylesheet" href="./lib/layer.css">
     <link rel="shortcut icon" href="./favicon.ico">
     <link rel="stylesheet" href="./font/font-awesome-4.7.0/css/font-awesome.css">
     <link rel="stylesheet" href="./css/details.css">
@@ -86,5 +87,6 @@
     {{/each}}
 </script>
 <script src='./js/jquery.js'></script>
+<script src='./lib/layer.js'></script>
 <script src='./js/art-template/template-web.js'></script>
 <script src='./js/details.js'></script>
