--- a/youhui.html
+++ b/youhui.html
@@ -77,7 +77,7 @@
 </body>
 
 </html>
-<script src='./lib/layer.js'></script>;
+<script src='./lib/layer.js'></script>
 <script src='./js/jquery.js'></script>
 <script src='./js/art-template/template-web.js'></script>
 <script type="text/template" id='goods'>
