--- a/font/font-zpy/demo_symbol.html
+++ b/font/font-zpy/demo_symbol.html
@@ -51,6 +51,14 @@
                     <div class="fontclass">#icon-right-circle</div>
                 </li>
             
+                <li>
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-xiangshang"></use>
+                    </svg>
+                    <div class="name">向上</div>
+                    <div class="fontclass">#icon-xiangshang</div>
+                </li>
+            
         </ul>
 
 
