--- a/toolActivity.html
+++ b/toolActivity.html
@@ -20,7 +20,7 @@
         </div>
         <h3>省钱控-最新页面</h3>
         <div class="download">
-            <a href="javascript:;">
+            <a href="./index.html">
                 <img src="./images/header_app.png" alt="">
             </a>
         </div>
@@ -66,15 +66,10 @@
 
     <script src="./js/jquery.js"></script>
     <script src="./js/jquery.lazyload.js"></script>
-    <script src="./js/zpy/fastclick.js"></script>
     <script src="./js/zpy/template-web.js"></script>
     <script src="./js/toolActivity.js"></script>
     <script>
-        if ('addEventListener' in document) {
-            document.addEventListener('DOMContentLoaded', function () {
-                FastClick.attach(document.body);
-            }, false);
-        }
+  
 
         //获取元素
         var selectObj = document.getElementsByTagName("select");
