--- a/font/font-zpy/demo_fontclass.html
+++ b/font/font-zpy/demo_fontclass.html
@@ -30,6 +30,12 @@
                     <div class="fontclass">.icon-right-circle</div>
                 </li>
             
+                <li>
+                <i class="icon iconfont icon-xiangshang"></i>
+                    <div class="name">向上</div>
+                    <div class="fontclass">.icon-xiangshang</div>
+                </li>
+            
         </ul>
 
         <h2 id="font-class-">font-class引用</h2>
