--- a/font/font-zpy/demo_unicode.html
+++ b/font/font-zpy/demo_unicode.html
@@ -50,6 +50,12 @@
                     <div class="code">&amp;#xe783;</div>
                 </li>
             
+                <li>
+                <i class="icon iconfont">&#xe63c;</i>
+                    <div class="name">向上</div>
+                    <div class="code">&amp;#xe63c;</div>
+                </li>
+            
         </ul>
         <h2 id="unicode-">unicode引用</h2>
         <hr>
