--- a/moneyctrl.html
+++ b/moneyctrl.html
@@ -183,6 +183,11 @@
             setData(pageid);
             $(options[pageid - 1]).prop("selected", "selected");
         }
+
+        $(".back").on("click",function () {
+            // console.log("哈哈哈");
+            history.back();
+        });
     </script>
 </body>
 
