--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
     <div class="button clearfix">
         <a href="#" class="in">登录</a>
         <a href="#" class="sign">注册</a>
-        <div href="#" class="top">
-            <img src="./images/top.png">回到顶部</div>
+        <a href="#" class="top">
+            <img src="./images/top.png">回到顶部</a>
     </div>
 
     <!-- 底部 -->
