--- a/moneyctrl.html
+++ b/moneyctrl.html
@@ -64,6 +64,25 @@
     </div>
     <!-- 分页部分结束 -->
 
+   <!-- 按钮 -->
+   <div class="button clearfix">
+    <a href="#" class="in">登录</a>
+    <a href="#" class="sign">注册</a>
+    <a href="#" class="top">
+        <img src="./images/top.png">回到顶部</a>
+</div>
+
+<!-- 底部 -->
+<footer>
+    <p>
+        <a href="#">手机下载</a>
+        <a href="#"> 慢慢买手机版</a>
+        -- 掌上比价平台</p>
+    <p>
+        m.manmanbuy.com
+    </p>
+</footer>
+
     <script src="./js/jquery.js"></script>
     <script src="./js/jquery.lazyload.js"></script>
     <script src="./js/zpy/template-web.js"></script>
