--- a/youhui.html
+++ b/youhui.html
@@ -16,7 +16,7 @@
 <body>
     <div class="box">
         <header>
-            <a class="icon-l" href="">
+            <a class="icon-l" href="index.html">
                 <i class="fa fa-angle-left"></i>
             </a>
             <h1 id="1">省钱控 - 最新优惠</h1>
