--- a/details.html
+++ b/details.html
@@ -16,7 +16,7 @@
 <body>
     <div class="box">
             <header>
-                    <span class="icon-l" href="./youhui.html">
+                    <span class="icon-l back">
                         <i class="fa fa-angle-left"></i>
                     </span>
                     <h1 id="1">
